HS-1704: fix minion-gateway for flow with (#1208)
* HS-1704: fix minion-gateway for flow with
TenantLocationSpecificFlowDocumentLog

In order to btter support it, flow processor handles FlowLog rather than
Flow list. So that tenant and location are able to share between flows.

* HS-1704: increase test coverage

* HS-1704: increase test coverage

* HS-1704: address PR comments

* HS-1704: address PR comment

* HS-1704: increase test coverage